# mothrbox_v2

./: .env.demo  .gitignore  CLI_USAGE_GUARD.md  Dockerfile  PREREQUISITES.md  QUICK_REFERENCE.txt  README.md  ROADMAP.md  demo.sh  demo.txt  docker-compose.yml  hackathon-demo.txt  install.md  mothrbox  mothrbox.sh  mothrbox_bin  mothrbox_entrypoint.sh  plain.txt  setup-nautilus.sh  test-nautilus.sh  test.txt
mothrbox-wasm/: Cargo.toml
mothrbox-wasm-test/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
mothrbox-wasm-test/app/: page.tsx
mothrbox-wasm/src/: lib.rs
mothrbox_move/: Move.toml  Published.toml
mothrbox_move/sources/: mothrbox_move.move
mothrbox_move/tests/: mothrbox_move_tests.move
mothrbox_rs/: .dockerignore  Cargo.toml  Cargo.toml.backup  Cargo.toml.backup_original  Dockerfile  build-rust.sh  test.enc.txt
mothrbox_rs/proto/: file_service.proto
mothrbox_rs/src/: lib.rs  main.rs  walrus.rs
mothrbox_rs/src/encryption/: aes.rs  chacha.rs  ecc.rs  mod.rs
mothrbox_ts/: Dockerfile  deno.json
mothrbox_ts/src/: main.ts  walrus-client.ts
mothrbox_wasm/: Cargo.toml
mothrbox_wasm/src/: lib.rs
mothrbox_wasm/src/encryption/: aes.rs  chacha.rs  ecc.rs
mothrbox_wasm/www/: index.html
move/mothrbox_nautilus/: Move.toml
move/mothrbox_nautilus/sources/: mothrbox_nautilus.move  mothrbox_nautilus.move.backup
move/mothrbox_nautilus/tests/: mothrbox_nautilus_tests.move
nautilus-enclave/: Cargo.toml  decrypt-result.json  demo.txt  encryption-result.json  hackathon.txt  hello.txt  patient-record.txt
nautilus-enclave/src/: main.rs
