[package]
name = "mothrbox_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Your existing dependencies...

# Encryption dependencies
p256 = { version = "0.13", features = ["ecdh"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
ctr = "0.9"
rand = "0.8"
hex = "0.4"