[package]
name = "mothrbox_wasm"
description = "mothrbox_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] } # CRITICAL: Enables browser crypto RNG
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Cryptography
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
p256 = { version = "0.13", features = ["ecdh"] } # NIST P-256 for ECC
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
